--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <!-- <html style="width:2259px;height:1140px"> -->
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -8,6 +9,7 @@
     <title><%= webpackConfig.name %></title>
   </head>
   <body>
+  <!-- <body style="zoom:85%"> -->
     <noscript>
       <strong>We're sorry but <%= webpackConfig.name %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
@@ -15,3 +17,10 @@
     <!-- built files will be auto injected -->
   </body>
 </html>
+
+<!-- <style type="text/css">
+ 
+  body {transform: scale(0.85) translate(200px, 100px); }
+   
+</style> -->
+
